WIP: drop <R, I> generic
Change-Id: Ib8212f26946fe02f70a947e684aa199785f974d4
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>